syntax = "proto3";

package m.gameengine.v1;

option go_package = "gameengine";

message GetSizeRequest{

}

message GetSizeResponse {
    double size = 1;
}

message SetScoreRequest {
    double score = 1;
}

message SetScoreResponse {
    bool set = 1;
}

service GameEngine {
    rpc GetSize (GetSizeRequest) returns (GetSizeResponse);
    rpc SetScore (SetScoreRequest) returns (SetScoreResponse);
}