syntax = "proto3";
package m.highscore.v1;

option go_package = "game";

message SetHighScoreRequest {
    double high_score = 1;
}

message SetHighScoreResponse {
    bool set = 1;
}

message GetHighScoreRequest {

}

message GetHighScoreResponse {
    double high_score = 1;
}

service Game {
    rpc SetHighScore (SetHighScoreRequest) returns (SetHighScoreResponse);
    rpc GetHighScore (GetHighScoreRequest) returns (GetHighScoreResponse);
}